<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>searlelab</groupId>
	<artifactId>context</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>context</name>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<context.mainClass>org.searlelab.context.Context</context.mainClass>
	</properties>

	<repositories>
		<repository>
			<id>context-bundled-libs</id>
			<name>EncyclopeDIA and MSRawJava, supplied by the maintainer</name>
			<url>${project.baseUri}libs</url>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>maccoss</groupId>
			<artifactId>encyclopedia</artifactId>
			<version>6.6.24</version>
			<exclusions>
				<exclusion>
					<groupId>org.searlelab</groupId>
					<artifactId>jchronologer</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.searlelab</groupId>
					<artifactId>javapot</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.searlelab</groupId>
			<artifactId>msrawjava-core-nolice</artifactId>
			<version>26.7.31</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.16.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${context.mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>package</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.6.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<createDependencyReducedPom>false</createDependencyReducedPom>
									<shadedArtifactAttached>false</shadedArtifactAttached>
									<filters>
										<filter>
											<artifact>*:*</artifact>
											<excludes>
												<exclude>META-INF/*.SF</exclude>
												<exclude>META-INF/*.DSA</exclude>
												<exclude>META-INF/*.RSA</exclude>
												<exclude>module-info.class</exclude>
											</excludes>
										</filter>
									</filters>
									<transformers>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
											<mainClass>${context.mainClass}</mainClass>
											<!-- So the jar says which version it is even after it is
											     renamed to context.jar for the release. -->
											<manifestEntries>
												<Implementation-Title>Context</Implementation-Title>
												<Implementation-Version>${project.version}</Implementation-Version>
											</manifestEntries>
										</transformer>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
									</transformers>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>verify-no-vendor-binaries</id>
								<phase>verify</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<condition property="context.has.vendor.binaries">
											<resourcecount when="greater" count="0">
												<zipfileset src="${project.build.directory}/${project.build.finalName}.jar"
													includes="msraw/**" />
											</resourcecount>
										</condition>
										<fail if="context.has.vendor.binaries"
											message="The shaded jar packages msraw/** vendor binaries, which must not be published. Are you depending on msrawjava-core instead of msrawjava-core-nolice?" />
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
